# python-llm-json-adapter

./: .gitignore  LICENSE  README.md  pyproject.toml
llm_json_adapter/: __init__.py  exceptions.py  llm_json_adapter.py
llm_json_adapter/objects/: function.py  response.py
llm_json_adapter/providers/: languages.py  provider.py
llm_json_adapter/providers/bedrock/: provider.py
llm_json_adapter/providers/google/: provider.py
llm_json_adapter/providers/ollama/: provider.py
llm_json_adapter/providers/openai/: provider.py
llm_json_adapter/utilities/: __init__.py  json_utility.py
tests/: test_llm_json_adapter.py
