[tool.poetry]
name = "llm-json-adapter"
version = "0.1.0"
description = ""
authors = ["Takaaki Mizuno <takaaki.mizuno@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_json_adapter"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.7.1"
google-generativeai = "^0.3.2"
jsonschema = "^4.20.0"
pydantic = "^2.5.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
toml = "^0.10.2"
yapf = "^0.40.2"
isort = "^5.13.2"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
